sams_server feedback add product_id ensure

--- a/sams_server/feedback_test.html
+++ b/sams_server/feedback_test.html
@@ -6,6 +6,7 @@
 <body>
 
 <form action="feedback.php" method="post" enctype="multipart/form-data">
+product_id: <input type="Text" name="product_id"><br/>
 feedback: <input type="Text" name="feedback"><br/>
 <label for="file">Filename:</label>
 <input type="file" name="file" id="file" /><br/>
