sams_server/feedback.php multi-file support.

--- a/sams_server/feedback_test.html
+++ b/sams_server/feedback_test.html
@@ -8,8 +8,11 @@
 <form action="feedback.php" method="post" enctype="multipart/form-data">
 product_id: <input type="Text" name="product_id"><br/>
 feedback: <input type="Text" name="feedback"><br/>
-<label for="file">Filename:</label>
-<input type="file" name="file" id="file" /><br/>
+<label for="file">Add-on Files:</label><br/>
+<input type="file" name="file1" id="file1" /><br/>
+<input type="file" name="file2" id="file2" /><br/>
+<input type="file" name="file3" id="file3" /><br/>
+<input type="file" name="file4" id="file4" /><br/>
 <input type="submit" name="submit" value="Submit" />
 </form>
 
