sams_server add noukey sams

--- a/sams_server/addrevisionH.html
+++ b/sams_server/addrevisionH.html
@@ -57,8 +57,11 @@
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td align="right">版本类型：</td>
+    <td><select name="pt_id">
+      <option value="1" selected>UKey版本</option>
+      <option value="2">无UKey版本</option>
+    </select>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
